Agentforce Hackathon Source Code/force-app/main/default/objects/Test_Drive__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Test Drive</relationshipLabel>
    <relationshipName>Test_Drive</relationshipName>
    <type>Lookup</type>
</CustomField>