Agentforce Hackathon Source Code/force-app/main/default/objects/Test_Drive__c/fields/Asset_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Asset_Time_Slot__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Asset Time Slot chosen for this test drive</description>
    <inlineHelpText>Select the Asset Time Slot reserved for this test drive</inlineHelpText>
    <label>Asset Time Slot</label>
    <referenceTo>Asset_Time_Slot__c</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>TestDrive_TimeSlots</relationshipName>
    <type>Lookup</type>
</CustomField>