Agentforce Hackathon Source Code/force-app/main/default/objects/Test_Drive__c/fields/BookingChannel__c.field-meta.xml
<CustomField>
    <fullName>BookingChannel__c</fullName>
    <description>Channel through which the test drive was booked</description>
    <label>Booking Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agentforce</fullName>
                <default>true</default>
                <label>Agentforce</label>
            </value>
            <value>
                <fullName>Website Form</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>