Agentforce Hackathon Source Code/force-app/main/default/objects/Test_Drive__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Contact for the test drive customer</description>
    <inlineHelpText>Select the contact who will take the test drive</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>TestDrives</relationshipName>
    <type>Lookup</type>
</CustomField>