Agentforce Hackathon Source Code/force-app/main/default/objects/Test_Drive__c/fields/CustomerZipCode__c.field-meta.xml
<CustomField>
    <fullName>CustomerZipCode__c</fullName>
    <description>Zip code provided by customer for routing to nearest dealership</description>
    <inlineHelpText>The zip code used to determine the nearest dealership</inlineHelpText>
    <label>Customer Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>