Agentforce Hackathon Source Code/force-app/main/default/objects/Test_Drive__c/fields/Dealership__c.field-meta.xml
<CustomField>
    <fullName>Dealership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The dealership where the test drive will take place</description>
    <label>Dealership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>TestDrives</relationshipName>
    <type>Lookup</type>
</CustomField>