Agentforce Hackathon Source Code/force-app/main/default/objects/Test_Drive__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>