Agentforce Hackathon Source Code/force-app/main/default/objects/Test_Drive__c/fields/PreferredTimeSlot__c.field-meta.xml
<CustomField>
    <fullName>PreferredTimeSlot__c</fullName>
    <label>Preferred Time Slot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>09:00 AM - 10:00 AM</fullName>
            </value>
            <value>
                <fullName>10:00 AM - 11:00 AM</fullName>
                <default>true</default>
                <label>10:00 AM - 11:00 AM</label>
            </value>
            <value>
                <fullName>11:00 AM - 12:00 PM</fullName>
            </value>
            <value>
                <fullName>12:00 PM - 01:00 PM</fullName>
            </value>
            <value>
                <fullName>01:00 PM - 02:00 PM</fullName>
            </value>
            <value>
                <fullName>02:00 PM - 03:00 PM</fullName>
            </value>
            <value>
                <fullName>03:00 PM - 04:00 PM</fullName>
            </value>
            <value>
                <fullName>04:00 PM - 05:00 PM</fullName>
            </value>
            <value>
                <fullName>05:00 PM - 06:00 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>